--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,25 @@
  *= require_tree .
  *= require_self
  */
+
+ h1{
+  margin: 50px;
+  padding: 50px;
+  text-align: center;
+  font-weight: 900;
+  background:rgb(71, 71, 231);
+ }
+h3, p{
+  margin: 50px;
+  padding: 30px 30px;
+  color: darkblue;
+  font-size: 1rem;
+  border-radius: 5px;
+}
+div, form{
+  border-bottom: 1px solid darkgrey;
+  background: rgb(100, 163, 199);
+  padding: 30px;
+  border-radius: 5px;
+  margin: 20px;
+}
